# grpc-example

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
client/: CMakeLists.txt
client/src/: Operation.h  main.cpp
proto/protos/: calculator.proto
server/: CMakeLists.txt
server/src/: main.cpp
